--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ span.psw {
 </head>
 <body>
 
-<h2>Student Login App</h2>
+<h2>Trainer Login App</h2>
 
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
 
