--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ span.psw {
 </head>
 <body>
 
-<h2>Login App</h2>
+<h2>Admin Login</h2>
 
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
 
@@ -136,7 +136,7 @@ span.psw {
   <form class="modal-content animate" action="/action_page.php" method="post">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-      <img src="img_avatar2.png" alt="Avatar" class="avatar">
+      <img src="admin image.jpg" alt="Avatar" class="avatar">
     </div>
 
     <div class="container">
